update folder for images

--- a/recipes/coffeelipscrub.html
+++ b/recipes/coffeelipscrub.html
@@ -13,7 +13,7 @@
   <div class="content">
 
    <div class="center">
-   <img src="coffeelipscrub.png">
+   <img src="images/coffeelipscrub.png">
    <p>Lips are the biggest contributor to a beautiful smile, that’s why it’s necessary to keep your lips hydrated and healthy.<br> This can be accomplished by drinking enough water, using a lip balm daily, and removing dry skin. <br>The good thing is that you can make a simple and cheap scrub at home. </p>	
    </div>	    
    
