update folder for images

--- a/recipes/coffeeshampoo.html
+++ b/recipes/coffeeshampoo.html
@@ -13,7 +13,7 @@
   <div class="content">
 
     <div class="center">
-     <img src="coffeeshampoo.png">
+     <img src="images/coffeeshampoo.png">
      <p>Coffee contains properties that make it excellent for hair and scalp care.<br> It stimulates blood circulation and removes dead skin cells, preventing hair loss. <br>It also strengthens the hair, darkens the natural color a little, and provides a pleasant aroma.<br> If you dream of long and healthy hair, this homemade shampoo is exactly what you need.</p>	
      </div>    
     
