--- a/recipes/coffeebodyscrub.html
+++ b/recipes/coffeebodyscrub.html
@@ -14,12 +14,11 @@
   <div class="content">
     
     <div class="center">
-     <img src="../images/coffeebodyscrub.png">
+     <img src="images/coffeebodyscrub.png">
      <p>Coffee is very good for fighting cellulite because, as we mentioned before, it stimulates    blood circulation.<br> This helps remove excess fluid that accumulates in the connective tissue. <br>It takes a few extra minutes to include coffee in your beauty routine, but it’s definitely worth the time. </p>	
     </div>	    
  
-    <div class="ingredients-container">
-		
+    <div class="ingredients-container">		
      <h3>You will need:</h3>
      <ul>		  
      <li>5 tsp of ground coffee (125 g)</li>
