update images path

--- a/recipes/coffeemask.html
+++ b/recipes/coffeemask.html
@@ -14,7 +14,7 @@
 <div class="content">
 
   <div class="center">
-   <img src="images/coffeemask.png">
+   <img src="../images/coffeemask.png">
    <p>Coffee is a natural exfoliant, excellent for removing dead skin cells. <br>
 It stimulates the production of collagen and acts as an anti-inflammatory. <br>After a relaxing coffee mask, the skin on the neck and face will be soft, clean, and smooth.   </p>
    </div>
